syntax = "proto3";

package grpc;

option go_package = "./;grpc";

import "google/protobuf/struct.proto";

service DependencyManagement {
  rpc Detect(stream DetectRequest) returns (DetectResponse) {}
}

message DetectRequest {
  oneof data {
    FileInfo file_info = 3;
    bytes chunk_data = 4;
  };
}

message DetectResponse {
  string message = 1;
  google.protobuf.Struct metadata = 2;
}

message FileInfo {
  string fileName = 1;
  string checksum = 2;
}